testsuite/tests/grammar/specific_field_type/test.out
test.py:16: error: Specified type is FooNode, but it could be more specific: Example
Code generation was successful
Done
